Revert "1.21 support"
This reverts commit a7713e21ff95eda9fc24bc7c987d0100b4b4ef6a.